# AdventOfCode

./: .gitignore  LICENSE  README.md
2018/: README.md
2018/python/: README.md
2018/python/day01/: part2.py
2018/python/day02/: part2.py
2018/python/day03/: part1.py  part2.py
2018/python/day1/: part1.py
2018/python/day2/: part1.py
2020/: README.md
2020/java/: .gitignore  README.md  build.gradle
2020/python/: README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  input_reader.py
2021/: README.md
2021/extras/: day01.awk  day2.awk  day3.awk
2021/go/: README.md  go.mod
2021/go/day01/: day01.go  day01_test.go
2021/go/day02/: day2.go  day2_test.go
2021/go/day03/: day3.go  day3_test.go
2021/go/day04/: day4.go  day4_test.go
2021/go/day05/: day5.go  day5_test.go
2021/go/day06/: day6.go  day6_test.go
2021/go/day07/: day7.go  day7_test.go
2021/go/day08/: day8.go  day8_test.go
2021/go/day09/: day9.go  day9_test.go
2021/go/day10/: day10.go  day10_test.go
2021/scripts/: add-stars.mjs  package.json  run-all.mjs
2022/: README.md
2022/extras/: README.md  day06.py
2022/go/: go.mod
2022/rust/: README.md
2022/scripts/: stars.lisp
2023/: Cargo.toml  README.md
2023/extra/: README.md  aoc.cabal  extra.cabal
2023/extra/app/: Day01.hs  Day15.hs  Input.hs  Main.hs
2023/extra/lib/: Day01.hs  Input.hs
2023/extra/tests/: Day15Test.hs  Main.hs
2023/haskell-aoc/: aoc.cabal
2023/haskell-aoc/app/: Main.hs
2023/haskell-aoc/lib/: Day01.hs  Day15.hs
2023/haskell-aoc/tests/: Day01Test.hs
2023/src/: main.rs
2023/src/prepare/: config.rs  mod.rs  template.rs
2023/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day09.rs  day15.rs  mod.rs  utils.rs
day01/: cargo.toml
day01/src/: main.rs
day02/: cargo.toml
day02/src/: main.rs
day03/: cargo.toml
day03/src/: main.rs
extras/: README.md  day01.awk  day04.py  day06.py
go/: README.md  go.mod
go/day07/: day7.go  day7_test.go
go/day08/: day08_test.go  day8.go  day8_test.go
go/day09/: day09.go  day09_test.go
go/day10/: day10.go  day10_test.go
go/day11/: day11.go  day11_test.go
go/lib/: convert.go  convert_test.go  input.go  int.go  int_test.go  slice.go  slice_test.go  string.go  string_test.go
lib/src/: lib.rs
rust/src/: strings.rs
scripts/: Makefile  README.md  build.sh  stars.lisp
src/: lib.rs
(+53 files in other folders)
