cabal-version:      3.0
name:               aoc
version:            0.1.0.0
synopsis:

homepage:

license:            Apache-2.0
author:             Charles Bourget
maintainer:         charlesbourget657@gmail.com
extra-source-files: CHANGELOG.md

library aoc-lib
    exposed-modules:
        Input,
        Day01,
        Day15
    hs-source-dirs:
        lib
    build-depends:
        base ^>=4.17.2.0,
        split ^>=0.2.4,
        text ^>=2
    default-language: Haskell2010

executable aoc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:    
        base ^>=4.17.2.0,
        split ^>=0.2.4,
        text ^>=2,
        optparse-applicative ^>=0.18.0.0,
        aoc-lib

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-aoc
    type:             exitcode-stdio-1.0
    hs-source-dirs:   
        tests,
        app
    main-is:          Main.hs
    build-depends:    
        base ^>=4.17.2.0,
        HUnit,
        aoc-lib
    other-modules:
        Day01Test,
        Day15Test
    default-language: Haskell2010
