cabal-version:      3.0
name:               aoc
version:            0.1.0.0
synopsis:

homepage:

license:            Apache-2.0
license-file:       LICENSE
author:             Charles Bourget
maintainer:         charlesbourget657@gmail.com
extra-source-files: CHANGELOG.md

executable extra
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day01,
        Day15,
        Input

    build-depends:    
        base ^>=4.17.2.0,
        split ^>=0.2.4,
        text ^>=2,
        optparse-applicative ^>=0.18.0.0    

    hs-source-dirs:   app
    default-language: Haskell2010
